...
    @State private var isOn = false

    var body: some View {
        NavigationStack {
            Text(isOn ? "All activity on" : "All activity off")
                .font(.footnote)
                .navigationTitle("Journal")
                .navigationBarTitleDisplayMode(.large)
                .toolbar {
                    ToolbarItem(placement: .topBarTrailing) {
                        JournalAllActivityButton(isOn: $isOn)
                    }
                }
...
